fixed inject icon fix, modal text align fix

--- a/Distraction Shield/dataCollection/dataCollection.css
+++ b/Distraction Shield/dataCollection/dataCollection.css
@@ -10,7 +10,7 @@
     text-align:center;
 }
 
-#dataCollection .modal-dialog {
+#dataConsentModal .modal-dialog {
     display: inline-block;
     text-align: left;
 }
